リンク統一＆フォーマット

--- a/landing.html
+++ b/landing.html
@@ -2,11 +2,11 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>HALCinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="css/unity.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
     <link rel="stylesheet" type="text/css" href="./css/slider.css">
@@ -16,47 +16,53 @@
 </head>
 
 <body>
-    <header>
-        <h1><a href="index.html">HAL Cinema</a></h1>
-    </header>
-    <article>
-        <section class="content">
-            <h2>HAL Cinemaについて</h2>
-            <img id="theatre" src="img/theatre.jpg">
-            <div class="about">
-                <p>テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
-                <p>人を考えうのはとうとう今に同時にだですた。</p>
-                <p>いよいよ嘉納さんに批評部分そう発展が詰めだ自分その金力それか約束にという同説明ありなくありたて、その今日は私か余裕ずるより落ちや、嘉納さんののに悪口のあなたからいったい実矛盾と与えと何信念からご料簡で思うようと初めて肝尊敬で通じたですが、とうていかつて徹底に当てるたてしまった事のありありない。</p>
-                <p>さてたとえばお例外をしつもりはぴたり立派とするなのに、その社会へはあるだとという豆腐が儲けていますます。</p>
-                <p>こういうため理論の末その画は私末をするないかと張さんにもっないなけれ、礼式の当時ですとして大創設たたいですて、人の後に心で先刻だけの自己に次第出ので得るて、一応の十月が考えるてそのためにむしろ進んたでと叫びですのでて、なくたですて実際ごがた説きたのましたある。</p>
-                <p>ところが師範か容易か落第を思いまいて、今度ごろ主義がございからいなら日へ同推測のほかに抱いらしくです。</p>
+<header>
+    <h1><a href="index.html">HAL Cinema</a></h1>
+</header>
+<article>
+    <section class="content">
+        <h2>HAL Cinemaについて</h2>
+        <img id="theatre" src="img/theatre.jpg">
+        <div class="about">
+            <p>テストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテストテスト</p>
+            <p>人を考えうのはとうとう今に同時にだですた。</p>
+            <p>
+                いよいよ嘉納さんに批評部分そう発展が詰めだ自分その金力それか約束にという同説明ありなくありたて、その今日は私か余裕ずるより落ちや、嘉納さんののに悪口のあなたからいったい実矛盾と与えと何信念からご料簡で思うようと初めて肝尊敬で通じたですが、とうていかつて徹底に当てるたてしまった事のありありない。</p>
+            <p>さてたとえばお例外をしつもりはぴたり立派とするなのに、その社会へはあるだとという豆腐が儲けていますます。</p>
+            <p>
+                こういうため理論の末その画は私末をするないかと張さんにもっないなけれ、礼式の当時ですとして大創設たたいですて、人の後に心で先刻だけの自己に次第出ので得るて、一応の十月が考えるてそのためにむしろ進んたでと叫びですのでて、なくたですて実際ごがた説きたのましたある。</p>
+            <p>ところが師範か容易か落第を思いまいて、今度ごろ主義がございからいなら日へ同推測のほかに抱いらしくです。</p>
+        </div>
+    </section>
+</article>
+
+<a href="index.html">
+    <button>サイトに進む</button>
+</a>
+
+<div id="container">
+    <h2>上映予定映画</h2>
+    <div id="slider">
+        <section class="s-wrap">
+            <div class="box">
+                <img src="./img/Alien.jpg" alt="topScroll" class="slide-item">
+            </div>
+            <div class="box">
+                <img src="./img/thesha.jpg" alt="topScroll" class="slide-item">
+            </div>
+            <div class="box">
+                <img src="./img/Godfather.png" alt="topScroll" class="slide-item">
             </div>
         </section>
-    </article>
-
-    <a href="index.html"><button>サイトに進む</button></a>
-
-    <div id="container">
-        <h2>上映予定映画</h2>
-        <div id="slider">
-            <section class="s-wrap">
-                <div class="box">
-                    <img src="./img/Alien.jpg" alt="topScroll" class="slide-item">
-                </div>
-                <div class="box">
-                    <img src="./img/thesha.jpg" alt="topScroll" class="slide-item">
-                </div>
-                <div class="box">
-                    <img src="./img/Godfather.png" alt="topScroll" class="slide-item">
-                </div>
-            </section>
-        </div>
     </div>
-    <a href="index.html"><button>サイトに進む</button></a>
+</div>
+<a href="index.html">
+    <button>サイトに進む</button>
+</a>
 
-    <footer>
-        <p>copyright &copy; 2019 HAL Cinema</p>
-    </footer>
+<footer>
+    <p>copyright &copy; 2019 HAL Cinema</p>
+</footer>
 </body>
 
 </html>
