--- a/survey.html
+++ b/survey.html
@@ -2,98 +2,100 @@
 <html lang="ja">
 
 <head>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap">
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<title>アンケート</title>
-	<link rel="stylesheet" type="text/css" href="css/unity.css">
-	<link rel="stylesheet" type="text/css" href="css/hamburger.css">
-	<link rel="stylesheet" type="text/css" href="css/survey.css">
-	<script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
-	<script type="text/javascript" src="./js/hamburger.js"></script>
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+          integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>アンケート</title>
+    <link rel="stylesheet" type="text/css" href="css/unity.css">
+    <link rel="stylesheet" type="text/css" href="css/hamburger.css">
+    <link rel="stylesheet" type="text/css" href="css/survey.css">
+    <script type="text/javascript" src="./js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="./js/hamburger.js"></script>
 </head>
 
 <body>
-	<header>
-		<h1><a href="index.html">HAL Cinema</a></h1>
-		<div id="nav-toggle">
-			<div>
-				<span></span>
-				<span></span>
-				<span></span>
-			</div>
-		</div>
-		<div id="gloval-nav">
-			<nav>
-				<ul id="navigation">
-					<li><a href="index.html">トップページ</a></li>
-					<li><a href="roadshow.html">上映中作品</a></li>
-					<li><a href="nextRoadshow.html">公開予定作品</a></li>
-					<li><a href="#">アンケート</a></li>
-					<li><a href="#">アクセス</a></li>
-					<li><a href="contact.html">お問い合わせ</a></li>
-				</ul>
-			</nav>
-		</div>
-	</header>
+<header>
+    <h1><a href="index.html">HAL Cinema</a></h1>
+    <div id="nav-toggle">
+        <div>
+            <span></span>
+            <span></span>
+            <span></span>
+        </div>
+    </div>
+    <div id="gloval-nav">
+        <nav>
+            <ul id="navigation">
+                <li><a href="index.html">トップページ</a></li>
+                <li><a href="roadshow.html">上映中作品</a></li>
+                <li><a href="nextRoadshow.html">公開予定作品</a></li>
+                <li><a href="survey.html">アンケート</a></li>
+                <li><a href="access.html">アクセス</a></li>
+                <li><a href="contact.html">お問い合わせ</a></li>
+            </ul>
+        </nav>
+    </div>
+</header>
 
-	<section>
-		<h2>アンケート</h2>
-		<form action="">
-			<div class="form-group">
-				<label for="">メールアドレス</label>
-				<input type="email" name="" id="" class="textbox form-control">
-				<small class="text-muted">あなたのメールは他の誰とも共有しません。</small>
-			</div>
-			<div class="form-group">
-				<label for="">年齢層</label>
-				<select name="" id="" class="textbox form-control">
-					<option value="0">~10代</option>
-					<option value="">20代</option>
-					<option value="">30代</option>
-					<option value="">40代</option>
-					<option value="">50代</option>
-					<option value="">60代</option>
-					<option value="">70代</option>
-					<option value="">80代~</option>
-				</select>
-			</div>
-			<label for="">性別</label>
-			<div class="form-check">
-				<input type="radio" name="gender" id="" class="form-check-input">
-				<label class="form-check-label" for="exampleRadios1">男性</label>
-			</div>
-			<div class="form-check">
-				<input type="radio" name="gender" id="" class="form-check-input">
-				<label class="form-check-label" for="exampleRadios1">女性</label>
-			</div>
-			<br>
-			<div class="form-group">
-				<label for="">映画タイトル</label>
-				<input type="text" name="" id="" class="textbox form-control">
-			</div>
-			<div class="form-group">
-				<label for="">文</label>
-				<textarea name="" id="" cols="30" rows="10" class="textbox form-control"></textarea>
-			</div>
-			<button type="submit" class="textbox form-control">送信する</button>
-		</form>
-	</section>
+<section>
+    <h2>アンケート</h2>
+    <form action="">
+        <div class="form-group">
+            <label for="">メールアドレス</label>
+            <input type="email" name="" id="" class="textbox form-control">
+            <small class="text-muted">あなたのメールは他の誰とも共有しません。</small>
+        </div>
+        <div class="form-group">
+            <label for="">年齢層</label>
+            <select name="" id="" class="textbox form-control">
+                <option value="0">~10代</option>
+                <option value="">20代</option>
+                <option value="">30代</option>
+                <option value="">40代</option>
+                <option value="">50代</option>
+                <option value="">60代</option>
+                <option value="">70代</option>
+                <option value="">80代~</option>
+            </select>
+        </div>
+        <label for="">性別</label>
+        <div class="form-check">
+            <input type="radio" name="gender" id="" class="form-check-input">
+            <label class="form-check-label" for="exampleRadios1">男性</label>
+        </div>
+        <div class="form-check">
+            <input type="radio" name="gender" id="" class="form-check-input">
+            <label class="form-check-label" for="exampleRadios1">女性</label>
+        </div>
+        <br>
+        <div class="form-group">
+            <label for="">映画タイトル</label>
+            <input type="text" name="" id="" class="textbox form-control">
+        </div>
+        <div class="form-group">
+            <label for="">文</label>
+            <textarea name="" id="" cols="30" rows="10" class="textbox form-control"></textarea>
+        </div>
+        <button type="submit" class="textbox form-control">送信する</button>
+    </form>
+</section>
 
-	<footer>
-		<p>copyright &copy; 2019 HAL Cinema</p>
-	</footer>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-		integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-		crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-		integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-		crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-		integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-		crossorigin="anonymous"></script>
+<footer>
+    <p>copyright &copy; 2019 HAL Cinema</p>
+</footer>
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
