--- a/contact.html
+++ b/contact.html
@@ -30,11 +30,11 @@
     <div id="gloval-nav">
         <nav>
             <ul id="navigation">
-                <li><a href="#">トップページ</a></li>
+                <li><a href="index.html">トップページ</a></li>
                 <li><a href="roadshow.html">上映中作品</a></li>
                 <li><a href="nextRoadshow.html">公開予定作品</a></li>
-                <li><a href="#">アンケート</a></li>
-                <li><a href="#">アクセス</a></li>
+                <li><a href="survey.html">アンケート</a></li>
+                <li><a href="access.html">アクセス</a></li>
                 <li><a href="contact.html">お問い合わせ</a></li>
             </ul>
         </nav>
