上げれない画像は何？

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
             </div>
             <div class="movie">
-                <h3><a href="">The Equalizer</a></h3>
+                <h3><a href="">The Equalizer2</a></h3>
                 <div class="flexbox">
                     <div>13:30 ~</div>
                 </div>
