--- a/index.html
+++ b/index.html
@@ -74,21 +74,21 @@
                     <div>10:15 ~</div>
                 </div>
             </div>
-            <div class="movie">
+            <div class="movie pentagon">
                 <h3><a href="">ペンタゴンズ・ペーパー</a></h3>
                 <div class="flexbox">
                     <div>10:30 ~</div>
                     <div>16:00 ~</div>
                 </div>
             </div>
-            <div class="movie">
+            <div class="movie legend">
                 <h3><a href="">アイ　アム　レジェンド</a></h3>
                 <div class="flexbox">
                     <div>13:15 ~</div>
                     <div>15:30 ~</div>
                 </div>
             </div>
-            <div class="movie">
+            <div class="movie eqo">
                 <h3><a href="">The Equalizer2</a></h3>
                 <div class="flexbox">
                     <div>13:30 ~</div>
@@ -116,10 +116,6 @@
 </body>
 
 <style>
-    .jurassicworld2 {
-        background-image: url(./img/honoo.jpg);
-        background-size: 100%;
-    }
 </style>
 
 </html>
