画面デザイン小進化

--- a/nextRoadshow.html
+++ b/nextRoadshow.html
@@ -44,18 +44,57 @@
         <ul>
             <li>
                 <section>
-                    <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                        <div class="hidden">ゴッドファーザー</div>
+                    <div class="movie-list-img" style="background-image: url('img/eqo.jpg')">
+                        <div class="hidden">イコライザー2</div>
                     </div>
                     <div>
-                        <h3>ゴッドファーザー</h3>
+                        <h3 class="title">イコライザー2</h3>
+                        <p class="exp">[上映時間：120min]　主演：デンゼル・ワシントン</p>
                         <div>
-                            <p>
-                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                            </p>
+                            <!-- <p>
+                                    第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                    屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                    違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                    太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                                </p> -->
+                        </div>
+                    </div>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/oceans8.jpg')">
+                        <div class="hidden">オーシャンズ8</div>
+                    </div>
+                    <div>
+                        <h3 class="title">オーシャンズ8</h3>
+                        <p class="exp">[上映時間：111min]　主演：サンドラ・ブロック</p>
+                        <div>
+                            <!-- <p>
+                                    第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                    屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                    違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                    太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                                </p> -->
+                        </div>
+                    </div>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/Alien.jpg')">
+                        <div class="hidden">エイリアン</div>
+                    </div>
+                    <div>
+                        <h3 class="title">エイリアン</h3>
+                        <p class="exp">[上映時間：117min]　主演：エレン・リプリー</p>
+                        <div>
+                            <!-- <p>
+                                    第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                    屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                    違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                    太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                                </p> -->
                         </div>
                     </div>
                 </section>
@@ -66,68 +105,34 @@
                         <div class="hidden">ゴッドファーザー</div>
                     </div>
                     <div>
-                        <h3>ゴッドファーザー</h3>
+                        <h3 class="title">ゴッドファーザー</h3>
+                        <p class="exp">[上映時間：178min]　主演：マイケル・コルレオーネ</p>
                         <div>
-                            <p>
-                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                            </p>
+                            <!-- <p>
+                                    第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                    屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                    違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                    太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                                </p> -->
                         </div>
                     </div>
                 </section>
             </li>
             <li>
                 <section>
-                    <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                        <div class="hidden">ゴッドファーザー</div>
+                    <div class="movie-list-img" style="background-image: url('img/thesha.jpg')">
+                        <div class="hidden">ショーシャンクの空に</div>
                     </div>
                     <div>
-                        <h3>ゴッドファーザー</h3>
+                        <h3 class="title">ショーシャンクの空に</h3>
+                        <p class="exp">[上映時間：142min]　主演：アンドリュー・デュフレーン</p>
                         <div>
-                            <p>
-                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                            </p>
-                        </div>
-                    </div>
-                </section>
-            </li>
-            <li>
-                <section>
-                    <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                        <div class="hidden">ゴッドファーザー</div>
-                    </div>
-                    <div>
-                        <h3>ゴッドファーザー</h3>
-                        <div>
-                            <p>
-                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                            </p>
-                        </div>
-                    </div>
-                </section>
-            </li>
-            <li>
-                <section>
-                    <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                        <div class="hidden">ゴッドファーザー</div>
-                    </div>
-                    <div>
-                        <h3>ゴッドファーザー</h3>
-                        <div>
-                            <p>
-                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                            </p>
+                            <!-- <p>
+                                    第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                    屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                    違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                    太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                                </p> -->
                         </div>
                     </div>
                 </section>
