--- a/roadshow.html
+++ b/roadshow.html
@@ -2,11 +2,11 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>HALCinema 上映予定映画</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-          rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/unity.css">
     <link rel="stylesheet" type="text/css" href="./css/roadshow.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
@@ -16,124 +16,134 @@
 </head>
 
 <body>
-<header>
-    <h1><a href="index.html">HAL Cinema</a></h1>
-    <div id="nav-toggle">
-        <div>
-            <span></span>
-            <span></span>
-            <span></span>
+    <header>
+        <h1><a href="index.html">HAL Cinema</a></h1>
+        <div id="nav-toggle">
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-    </div>
-    <div id="gloval-nav">
-        <nav>
-            <ul id="navigation">
-                <li><a href="index.html">トップページ</a></li>
-                <li><a href="roadshow.html">上映中作品</a></li>
-                <li><a href="nextRoadshow.html">公開予定作品</a></li>
-                <li><a href="survey.html">アンケート</a></li>
-                <li><a href="access.html">アクセス</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+        <div id="gloval-nav">
+            <nav>
+                <ul id="navigation">
+                    <li><a href="index.html">トップページ</a></li>
+                    <li><a href="roadshow.html">上映中作品</a></li>
+                    <li><a href="nextRoadshow.html">公開予定作品</a></li>
+                    <li><a href="survey.html">アンケート</a></li>
+                    <li><a href="access.html">アクセス</a></li>
+                    <li><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<h2>上映予定映画</h2>
-<article class="movie-list">
-    <ul>
-        <li>
-            <section>
-                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                    <div class="hidden">ゴッドファーザー</div>
-                </div>
-                <div>
-                    <h3>ゴッドファーザー</h3>
-                    <div>
-                        <p>
-                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                        </p>
+    <h2>上映中の映画</h2>
+    <article class="movie-list">
+        <ul>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/legend.png')">
+                        <div class="hidden">アイ アム レジェンド</div>
                     </div>
-                </div>
-            </section>
-        </li>
-        <li>
-            <section>
-                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                    <div class="hidden">ゴッドファーザー</div>
-                </div>
-                <div>
-                    <h3>ゴッドファーザー</h3>
                     <div>
-                        <p>
-                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                        </p>
+                        <h3 class="title">アイ アム レジェンド</h3>
+                        <p class="exp">[上映時間：104min]　主演：ウィル・スミス</p>
+                        <div>
+                            <!-- <p>
+                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                            </p> -->
+                        </div>
                     </div>
-                </div>
-            </section>
-        </li>
-        <li>
-            <section>
-                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                    <div class="hidden">ゴッドファーザー</div>
-                </div>
-                <div>
-                    <h3>ゴッドファーザー</h3>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/honoo.jpg')">
+                        <div class="hidden">ジュラシックワールド 炎の王国</div>
+                    </div>
                     <div>
-                        <p>
-                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                        </p>
+                        <h3 class="title">ジュラシックワールド 炎の王国</h3>
+                        <p class="exp">[上映時間：130min]　主演：クリス・ブラッド</p>
+                        <div>
+                            <!-- <p>
+                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                            </p> -->
+                        </div>
                     </div>
-                </div>
-            </section>
-        </li>
-        <li>
-            <section>
-                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                    <div class="hidden">ゴッドファーザー</div>
-                </div>
-                <div>
-                    <h3>ゴッドファーザー</h3>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/Alien.jpg')">
+                        <div class="hidden">エイリアン</div>
+                    </div>
                     <div>
-                        <p>
-                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                        </p>
+                        <h3 class="title">エイリアン</h3>
+                        <p class="exp">[上映時間：117min]　主演：エレン・リプリー</p>
+                        <div>
+                            <!-- <p>
+                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                            </p> -->
+                        </div>
                     </div>
-                </div>
-            </section>
-        </li>
-        <li>
-            <section>
-                <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
-                    <div class="hidden">ゴッドファーザー</div>
-                </div>
-                <div>
-                    <h3>ゴッドファーザー</h3>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/Godfather.png')">
+                        <div class="hidden">ゴッドファーザー</div>
+                    </div>
                     <div>
-                        <p>
-                            第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
-                            屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
-                            違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
-                            太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
-                        </p>
+                        <h3 class="title">ゴッドファーザー</h3>
+                        <p class="exp">[上映時間：178min]　主演：マイケル・コルレオーネ</p>
+                        <div>
+                            <!-- <p>
+                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                            </p> -->
+                        </div>
                     </div>
-                </div>
-            </section>
-        </li>
-    </ul>
-</article>
+                </section>
+            </li>
+            <li>
+                <section>
+                    <div class="movie-list-img" style="background-image: url('img/thesha.jpg')">
+                        <div class="hidden">ショーシャンクの空に</div>
+                    </div>
+                    <div>
+                        <h3 class="title">ショーシャンクの空に</h3>
+                        <p class="exp">[上映時間：142min]　主演：アンドリュー・デュフレーン</p>
+                        <div>
+                            <!-- <p>
+                                第二次世界大戦が終わった1945年。イタリア系アメリカ人のコルレオーネ家の邸宅はニューヨーク市郊外の高級住宅街の一角を占める。<br>
+                                屋敷では主人であるドン・コルレオーネ（マーロン・ブランド）の娘コニー（タリア・シャイア）の結婚披露宴が豪勢にとり行われていた。<br>
+                                違法に入手したであろう戦時中にガソリン配給優遇措置を受けるためのステッカーが貼られた高級車が敷地外に並び、<br>
+                                太陽の下では故郷を同じくするイタリア人やイタリア系の男女が老いも若きも陽気に歌い踊っている。<br>
+                            </p> -->
+                        </div>
+                    </div>
+                </section>
+            </li>
+        </ul>
+    </article>
+
+    <footer>
+        <div class="foot"></div>
+        <p>copyright &copy; 2019 HAL Cinema</p>
+    </footer>
 </body>
 
 </html>
