--- a/access.html
+++ b/access.html
@@ -2,11 +2,11 @@
 <html lang="ja" dir="ltr">
 
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>HAL Cinema</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Fredericka+the+Great|Monoton|Sacramento|Tangerine&display=swap"
-          rel="stylesheet">
+        rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="./css/unity.css">
     <link rel="stylesheet" type="text/css" href="./css/hamburger.css">
     <link rel="stylesheet" type="text/css" href="./css/access.css">
@@ -16,64 +16,64 @@
 </head>
 
 <body>
-<header>
-    <h1><a href="index.html">HAL Cinema</a></h1>
-    <div id="nav-toggle">
-        <div>
-            <span></span>
-            <span></span>
-            <span></span>
+    <header>
+        <h1><a href="index.html">HAL Cinema</a></h1>
+        <div id="nav-toggle">
+            <div>
+                <span></span>
+                <span></span>
+                <span></span>
+            </div>
         </div>
-    </div>
-    <div id="gloval-nav">
-        <nav>
-            <ul id="navigation">
-                <li><a href="index.html">トップページ</a></li>
-                <li><a href="roadshow.html">上映中作品</a></li>
-                <li><a href="nextRoadshow.html">公開予定作品</a></li>
-                <li><a href="survey.html">アンケート</a></li>
-                <li><a href="access.html">アクセス</a></li>
-                <li><a href="contact.html">お問い合わせ</a></li>
-            </ul>
-        </nav>
-    </div>
-</header>
+        <div id="gloval-nav">
+            <nav>
+                <ul id="navigation">
+                    <li><a href="index.html">トップページ</a></li>
+                    <li><a href="roadshow.html">上映中作品</a></li>
+                    <li><a href="nextRoadshow.html">公開予定作品</a></li>
+                    <li><a href="survey.html">アンケート</a></li>
+                    <li><a href="access.html">アクセス</a></li>
+                    <li><a href="contact.html">お問い合わせ</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-<section>
-    <h2>アクセス</h2>
-    <div class="map">
-        <iframe
+    <section>
+        <h2>アクセス</h2>
+        <div class="map">
+            <iframe
                 src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3283.80935692062!2d135.5185703154635!3d34.60898198045827!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zMzTCsDM2JzMyLjMiTiAxMzXCsDMxJzE0LjciRQ!5e0!3m2!1sja!2sjp!4v1568854874933!5m2!1sja!2sjp"
                 width="100%" height="300px" frameborder="0"></iframe>
-    </div>
-    <div class="about">
-        <h3>施設情報</h3>
-        <div class="add">
-            <h4>・住所</h4>
-            <p>〒558-0004　大阪府大阪市住吉区長居東１丁目７−１７</p>
         </div>
-        <div class="acc">
-            <h4>・アクセス情報</h4>
-            <p>ながい公園 駅から 徒歩5分</p>
+        <div class="about">
+            <h3>施設情報</h3>
+            <div class="add">
+                <h4>・住所</h4>
+                <p>〒558-0004　大阪府大阪市住吉区長居東１丁目７−１７</p>
+            </div>
+            <div class="acc">
+                <h4>・アクセス情報</h4>
+                <p>ながい公園 駅から 徒歩5分</p>
+            </div>
+            <div class="tel">
+                <h4>・電話番号</h4>
+                <p>06ー6347ー1818</p>
+            </div>
+            <div class="car">
+                <h4>・駐車場＆駐輪場</h4>
+                <p>駐車場、駐輪場はないため、公共交通機関をご利用ください。</p>
+            </div>
+            <div class="cache">
+                <h4>・支払い方法</h4>
+                <p>現金のみ</p>
+            </div>
         </div>
-        <div class="tel">
-            <h4>・電話番号</h4>
-            <p>06ー6347ー1818</p>
-        </div>
-        <div class="car">
-            <h4>・駐車場＆駐輪場</h4>
-            <p>駐車場、駐輪場はないため、公共交通機関ウィご利用ください。</p>
-        </div>
-        <div class="cache">
-            <h4>・支払い方法</h4>
-            <p>現金のみ</p>
-        </div>
-    </div>
-</section>
+    </section>
 
-<footer>
-    <p>copyright &copy; 2019 HAL Cinema</p>
-</footer>
+    <footer>
+        <p>copyright &copy; 2019 HAL Cinema</p>
+    </footer>
 </body>
 
 </html>
