--- a/index.html
+++ b/index.html
@@ -43,76 +43,98 @@
         <div id="slider">
             <section class="s-wrap">
                 <div class="box">
-                    <img src="./img/thesha.jpg" alt="topScroll" class="slide-item">
+                    <img src="./img/Godzilla.jpg" alt="topScroll" class="slide-item">
+                </div>
+                <div class="exp">
+                    <div class="switch">●<span>●</span>●●●</div>
+                    <a href="#">
+                        <h2 class="mini-title">ゴジラ キング・オブ・モンスター</h2>
+                    </a>
+                    <p>
+                        王の覚醒。<br>
+                        世界の終焉が始まる。
+                    </p>
                 </div>
             </section>
         </div>
 
-        <section class="calen">
-            <h2>上映カレンダー</h2>
-            <div class="movie jurassicworld2">
-                <h3><a href="">ジュラシックワールド　炎の王国</a></h3>
-                <div class="flexbox">
-                    <div>10:15 ~</div>
+        <section class="calender">
+            <div class="calen">
+                <h2>上映カレンダー</h2>
+                <h3 class="date">
+                    11月10日（日）
+                </h3>
+                <div class="movie jurassicworld2">
+                    <h3><a href="">ジュラシックワールド　炎の王国</a></h3>
+                    <p>[上映時間：130min]</p>
+                    <div class="flexbox">
+                        <div>10:15 ~</div>
+                    </div>
                 </div>
-            </div>
-            <div class="movie pentagon">
-                <h3><a href="">ペンタゴンズ・ペーパー</a></h3>
-                <div class="flexbox">
-                    <div>10:30 ~</div>
-                    <div>16:00 ~</div>
+                <div class="movie pentagon">
+                    <h3><a href="">ペンタゴンズ・ペーパー</a></h3>
+                    <p>[上映時間：117min]</p>
+                    <div class="flexbox">
+                        <div>10:30 ~</div>
+                        <div>16:00 ~</div>
+                    </div>
                 </div>
-            </div>
-            <div class="movie legend">
-                <h3><a href="">アイ　アム　レジェンド</a></h3>
-                <div class="flexbox">
-                    <div>13:15 ~</div>
-                    <div>15:30 ~</div>
+                <div class="movie legend">
+                    <h3><a href="">アイ　アム　レジェンド</a></h3>
+                    <p>[上映時間：104min]</p>
+                    <div class="flexbox">
+                        <div>13:15 ~</div>
+                        <div>15:30 ~</div>
+                    </div>
                 </div>
-            </div>
-            <div class="movie eqo">
-                <h3><a href="">The Equalizer2</a></h3>
-                <div class="flexbox">
-                    <div>13:30 ~</div>
+                <div class="movie ram">
+                    <h3><a href="">ランペイジ　巨獣大乱闘</a></h3>
+                    <p>[上映時間：115min]</p>
+                    <div class="flexbox">
+                        <div>13:30 ~</div>
+                    </div>
                 </div>
             </div>
         </section>
 
-        <section id="money">
-            <h2>料金表</h2>
-            <table>
-                <tr>
-                    <th>大人</th>
-                    <td>1000円</td>
-                </tr>
-                <tr>
-                    <th>学生</th>
-                    <td>800円</td>
-                </tr>
-                <tr>
-                    <th>子供（〜中学生）</th>
-                    <td>500円</td>
-                </tr>
-            </table>
+        <section class="money">
+            <div id="money">
+                <h2>料金表</h2>
+                <table>
+                    <tr>
+                        <th>大人</th>
+                        <td>1000円</td>
+                    </tr>
+                    <tr>
+                        <th>学生</th>
+                        <td>800円</td>
+                    </tr>
+                    <tr>
+                        <th>子供（〜中学生）</th>
+                        <td>500円</td>
+                    </tr>
+                </table>
+            </div>
         </section>
 
-        <section class="time">
-            <h2>時間案内</h2>
-            <div class="sche">
-                <div>
-                    開館時間<span>10:00</span>
-                </div>
-                <div>
-                    閉館時間<span>21:00</span>
+        <section id="time">
+            <div class="time">
+                <h2>時間案内</h2>
+                <div class="sche">
+                    <div>
+                        開館時間<span>10:00</span>
+                    </div>
+                    <div>
+                        閉館時間<span>21:00</span>
+                    </div>
                 </div>
             </div>
         </section>
-    </div>
 
-    <footer>
-        <div class="foot"></div>
-        <p>copyright &copy; 2019 HAL Cinema</p>
-    </footer>
+        <footer>
+            <div class="foot"></div>
+            <p>copyright &copy; 2019 HAL Cinema</p>
+        </footer>
 </body>
 
 <style>
